[gd_scene load_steps=7 format=2]

[ext_resource path="res://Entities/Coin/CoinCore.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Collectibles/Coin/AnimatedTexture_Coin.tres" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 4 )

[sub_resource type="Animation" id=2]
resource_name = "Blinking"
length = 0.06
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3, 4 )

[sub_resource type="Animation" id=4]
resource_name = "ShrinkAndQueueFree"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="CoinCore" type="KinematicBody2D" groups=[
"Coin",
]]
position = Vector2( 0, 1 )
collision_layer = 32
script = ExtResource( 1 )
collect_icon = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="DestroyDelayTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="BlinkingPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/Blinking = SubResource( 2 )

[node name="LandPos" type="Position2D" parent="."]
position = Vector2( 0, 4 )

[node name="CoinArea2D" type="Area2D" parent="." groups=[
"Coin",
]]
editor/display_folded = true
visible = false
collision_layer = 32
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="CoinArea2D"]
visible = false
shape = SubResource( 3 )

[node name="CollectReadyTimer" type="Timer" parent="."]
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -36, -36 )
scale = Vector2( 6, 6 )
rect = Rect2( -10, -10, 32, 32 )

[node name="ShrinkAndQueueFreePlayer" type="AnimationPlayer" parent="."]
anims/ShrinkAndQueueFree = SubResource( 4 )
